# AvatarAi0-Generator

./: .replit  Pasted--FLASK-SECRET-KEY-f44d773dc991869591bb927210208fe2-OPENAI-API-KEY-sk-proj-Ermul2tE6nJ-1730701687978.txt  Pasted-Workflow-Overview-Capture-Initialization-Start-by-capturing-the-user-s-video-input-using-the-system--1730752006679.txt  Pasted-Yes-creating-the-instructions-in-Markdown-format-for-the-Replit-coding-expert-can-be-beneficial-Ma-1730701674526.txt  README.md  app.py  env.txt  google_credentials.json  main.py  pyproject.toml  replit.nix
desktop_ui/: qt_interface.py
static/css/: style.css
static/js/: avatar.js  pose_tracking.js  websocket.js
templates/: index.html
utils/: avatar_renderer.py  calibration.py  face_tracker.py  gesture_recognizer.py  google_cloud.py  pose_tracker.py  smplx_renderer.py
